--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [[redirects]]
-  from = "/*"
-  to = "https://real-estate-gfc9.onrender.com"
+  from = "/api/*"
+  to = "https://real-estate-gfc9.onrender.com/api/:splat"
